dxscale/sales/main/objects/Account/fields/CreatedByFlow__c.field-meta.xml
<CustomField>
    <fullName>CreatedByFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created  for CCORE-2127 to mark it as true if it is created using flow.</description>
    <label>CreatedByFlow</label>
    <type>Checkbox</type>
</CustomField>