dxscale/sales/main/objects/Account/fields/ExCo_ACV__c.field-meta.xml
<CustomField>
    <fullName>ExCo_ACV__c</fullName>
    <description>EAD-2227: Average Customer Value.</description>
    <inlineHelpText>Average Customer Value</inlineHelpText>
    <label>ACV</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>