dxscale/sales/main/objects/Account/fields/ExCo_Customer_Since__c.field-meta.xml
<CustomField>
    <fullName>ExCo_Customer_Since__c</fullName>
    <description>EAD-2227: The date the customer initially purchased their Sage Software</description>
    <inlineHelpText>The date the customer initially purchased their Sage Software</inlineHelpText>
    <label>Customer Since</label>
    <type>Date</type>
</CustomField>