dxscale/sales/main/objects/Account/fields/ExCo_Exec_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>ExCo_Exec_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EAD-2227: The Sponsor</description>
    <inlineHelpText>The Sponsor</inlineHelpText>
    <label>Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ExCo_Sponsor</relationshipName>
    <type>Lookup</type>
</CustomField>