dxscale/sales/main/objects/Account/fields/ExCo_Other_Pain_points__c.field-meta.xml
<CustomField>
    <fullName>ExCo_Other_Pain_points__c</fullName>
    <description>EAD-2227: Other Pain points with current solution (same as Opportunity)</description>
    <inlineHelpText>Other Pain points with current solution[Upto 9000 characters]</inlineHelpText>
    <label>Other Pain points with current solution</label>
    <length>9000</length>
    <type>LongTextArea</type>
</CustomField>