dxscale/sales/main/objects/Account/fields/ExCo_Pain_Points_w_Current_Solution__c.field-meta.xml
<CustomField>
    <fullName>ExCo_Pain_Points_w_Current_Solution__c</fullName>
    <description>EAD-2227: Same values from the &apos;Pain Points w/ Current Solution&apos; field on Opportunity</description>
    <inlineHelpText>Pain points with current solution</inlineHelpText>
    <label>Pain Points w/ Current Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price too high</fullName>
            </value>
            <value>
                <fullName>Wanted cloud solution</fullName>
            </value>
            <value>
                <fullName>Wanted monthly subscription</fullName>
            </value>
            <value>
                <fullName>Recommended to change solution</fullName>
            </value>
            <value>
                <fullName>Current is too difficult to use</fullName>
            </value>
            <value>
                <fullName>Current software unreliable</fullName>
            </value>
            <value>
                <fullName>Needed greater functionality</fullName>
            </value>
            <value>
                <fullName>Not happy with support</fullName>
            </value>
            <value>
                <fullName>After upgrade, software no longer worked</fullName>
            </value>
            <value>
                <fullName>End of product lifecycle</fullName>
            </value>
            <value>
                <fullName>Not scalable in line with business</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t integrate with 3rd party additions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>