dxscale/sales/main/objects/Account/fields/ExCo_Products_Used__c.field-meta.xml
<CustomField>
    <fullName>ExCo_Products_Used__c</fullName>
    <description>EAD-2227:  Sage products which the customer uses</description>
    <inlineHelpText>Sage products which the customer uses[Upto 255 characters]</inlineHelpText>
    <label>Products Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>