dxscale/sales/main/objects/Account/fields/ExCo_Relationship_Overview__c.field-meta.xml
<CustomField>
    <fullName>ExCo_Relationship_Overview__c</fullName>
    <description>EAD-2227: Overview of relationship with Sage to date</description>
    <inlineHelpText>Overview of relationship with Sage to date[Upto 255 characters]</inlineHelpText>
    <label>Relationship Overview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>