dxscale/sales/main/objects/Account/fields/Sage_Region__c.field-meta.xml
<CustomField>
    <fullName>Sage_Region__c</fullName>
    <label>Sage Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_Region</valueSetName>
    </valueSet>
</CustomField>